--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
         <button type="button" id = "btnListings">
             Get car Listings
         </button>
-        <button type = "button" id = "carForm">
+        <button type = "button" id = "ownersForm">
             Generate Owners Form
         </button>
         <button type = "button" id = "btnToyota">
